leafly overflow fix

--- a/assets/sass/3-modules/_store-menu.sass
+++ b/assets/sass/3-modules/_store-menu.sass
@@ -29,7 +29,7 @@
 			+mq-split
 				margin-bottom: 40px
 	&__leafly-container
-		overflow: hidden
+		overflow: scroll
 		-webkit-overflow-scrolling: touch
 		width: 87.952vw
 		height: 80vh
@@ -41,6 +41,7 @@
 		+mq-split
 			height: 50vh
 			padding: 10px
+			overflow: hidden
 	&__leafly
 		width: 100%
 		height: 100%
